--- a/client/app/pages/community/Community.less
+++ b/client/app/pages/community/Community.less
@@ -1,4 +1,5 @@
 .community-page {
+  padding-top: 24px;
   padding-bottom: 48px;
 }
 
